Thu Aug  8 23:08:13 1996  Sam Hartman  <hartmans@mit.edu>

	* default.exp: In add_kerberos_key and add_random_key only execute
 	the final expect_after if the spawn ID is still open; also soak up
 	all the kadmin responses.

Thu Aug  8 22:13:27 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* default.exp: Sleep for two seconds while waiting for KDC to
        start; sleep(1) doesn't always take up any time.

Mon Aug  5 21:16:48 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* default.exp: Update to new kdb5_util convention.

Mon Jul 29 11:19:20 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* default.exp: (kinit): Wait for eof from kinit before waiting for
		exit. 

Sat Jul 27 02:20:54 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* default.exp: Rewrite to use kdb5_util instead of kdb5_create and
		kdb5_stash. No longer add the kadmin/admin and changepw
		keys to the database as this is handled automatically.

Fri Jul 19 19:50:23 1996  Marc Horowitz  <marc@mit.edu>

	* default.exp: changes to work with the new admin system.  This is
 	primarily creating the correct keytab for the new admin server,
 	and using the new admin client for principal creation.

Mon May  6 11:54:20 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* default.exp: Add procedure setup_wrapper to first setup shared
		library environment variables and the exec program

Sat May  4 11:56:17 1996  Ezra Peisach  (epeisach@kangaroo.mit.edu)

	* default.exp: For stty_init set to \^h as on some /bin/sh, ^ is
		treated as a pipe.

Fri May  3 20:48:16 1996  Ken Raeburn  <raeburn@cygnus.com>

	Tue Apr  2 22:22:47 1996  Chris Provenzano  <proven@cygnus.com>

	* default.exp : Do an stty to set kill and erase correctly. 
		Things don't work if kill is set to '@'.

	Fri Mar 29 15:02:32 1996  Chris Provenzano  <proven@cygnus.com>

	* default.exp : Always use variable BINSH instead of sh.
		Use -f flag with kinit to get forwardable tickets.
		Setup kdc.conf to allow forwardable tickets.
